--- a/dashboard.html
+++ b/dashboard.html
@@ -615,6 +615,10 @@
 						<span class="icon">⚡</span>
 						<span>Result Entry</span>
 					</a>
+					<a class="button success" href="result/result_gonovot.html" title="Generate Duty List">
+						<span class="icon">⚡</span>
+						<span>Gonovot Entry</span>
+					</a>
 					<a class="button success" href="result/gonovot_3.html" title="Generate Duty List">
 						<span class="icon">⚡</span>
 						<span>Form 3</span>
