--- a/result/result_gonovot.html
+++ b/result/result_gonovot.html
@@ -739,7 +739,7 @@
                     if (insertError) throw insertError;
                 }
 
-                alert('✅ Referendum votes saved successfully!');
+                // alert('✅ Referendum votes saved successfully!');
                 closeModal();
                 loadCentres(); // Reload to update status
 
