--- a/generate/1_apointment_letter_all2.html
+++ b/generate/1_apointment_letter_all2.html
@@ -367,42 +367,8 @@
             <!-- Dynamic rows will be inserted here by JS -->
         </table>
         <p class="western" style="margin:4px 0 2px 0"></p>
-        <table style="width: 100%; border-collapse: collapse; margin-top: 2px;" class="size-11">
-            <tr>
-                <td
-                    style="border: 1px dashed #000; padding: 5px; width: 32%; text-align: center; vertical-align: middle;">
-                    <p class="bold">নির্বাচনি দ্রব্যাদি বিতরণের স্থান, তারিখ ও সময়</p>
-                </td>
-                <td
-                    style="border: 1px dashed #000; padding: 5px; width: 40%; text-align: center; vertical-align: middle;">
-                    <p class="bold">নির্বাচনি মালামাল ও নির্বাচনি ফলাফল গ্রহণের স্থান</p>
-                </td>
-                <td
-                    style="border: 1px dashed #000; padding: 5px; width: 28%; text-align: center; vertical-align: middle;">
-                    <p class="bold">ভোটগ্রহণের তারিখ ও সময়</p>
-                </td>
-            </tr>
-            <tr>
-                <td style="border: 1px dashed #000; padding: 5px; vertical-align: top;">
-                    <p><span class="bold" style="color: red;">স্থানঃ</span> উপজেলা পরিষদের অডিটরিয়াম, ফেনী সদর, ফেনী।
-                    </p>
-                    <p><span class="bold" style="color: red;">তারিখ:</span> ১১/০২/২০২৬ খ্রিঃ (বুধবার)</p>
-                    <p><span class="bold" style="color: red;">সময়:</span> সকাল ১১.০০ ঘটিকা।</p>
-                </td>
-                <td style="border: 1px dashed #000; padding: 5px; vertical-align: top;">
-                    <p>১। <span class="bold" style="color: red;">মালামাল গ্রহণ:</span> উপজেলা পরিষদের অডিটরিয়াম, ফেনী
-                        সদর, ফেনী।</p>
-                    <p>২। <span class="bold" style="color: red;">ফলাফল গ্রহণ:</span> উপজেলা পরিষদের অডিটরিয়াম, ফেনী সদর,
-                        ফেনী।</p>
-                </td>
-                <td style="border: 1px dashed #000; padding: 5px; vertical-align: top; text-align: center;">
-                    <p class="bold" style="color: red;">১২/০২/২০২৬ (বৃহস্পতিবার)</p>
-                    <p class="bold" style="color: red;">সকাল ৭.৩০ ঘটিকা হইতে বিকাল ৪.৩০ ঘটিকা পর্যন্ত বিরতিহীন ভাবে
-                        অনুষ্ঠিত হবে।</p>
-                </td>
-            </tr>
-        </table>
-
+        
+"change_record" এখানে দেখাবে। 
         <table style="width: 100%; margin-top: 20px;" class="size-11">
             <tr>
                 <td valign="top" style="width: 60%;">
